Added the heatmaps to our figures directory. Made README adjustments. Added markdown to EDA.ipynb file and some observations

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -24,10 +24,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# These lines add two columns containing the legnth of the book's summary and title\n",
     "df['title_length'] = df.title.apply(len)\n",
     "df['summary_length'] = df.summary.apply(len)\n",
     "df['title_duplicates'] = df.title.duplicated()\n",
     "df['summery_duplicates'] = df.summary.duplicated()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyzing Dataframe\n",
+    "==================="
    ]
   },
   {
@@ -47,6 +56,7 @@
     }
    ],
    "source": [
+    "#Shows us the number of columns and rows in our dataframe\n",
     "df.shape"
    ]
   },
@@ -79,6 +89,15 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations:\n",
+    "\n",
+    "1. All columns seem to contain data, so we do not have to filter out missing data."
    ]
   },
   {
@@ -129,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +169,7 @@
        "Name: title_duplicates, Length: 4296, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,8 +212,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations:\n",
+    "\n",
+    "1. The data does not contain solely unique entries for the title of its novels, specifically, there exist 361 title duplicates. Moreover, these duplicate entries are not necessarily identical. For example, the title \"Hunger Games\" appears 4 times in the data set. However, 3 of these entries provide the same cited summaries, while 1 appears to be a much lengthier version detailing the entire events of the novel. Addtionally, the genre descriptions of the duplicated entries also differ despite the fact that most shared the same cited summary. In total, \"Hunger Games\" was labelled as a science, romance, and fantasy centered novel.\n",
+    "\n",
+    "2. Most duplicate titles are only duplicated once, with a few (although not insignificant amount) being duplicated twice or three times. \n",
+    "\n",
+    "3. The most commonly duplicated titles consist of only one (arguable common occuring) word, such as \"Broken\", \"Bloodline\", or \"Annihiliation\". "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +239,7 @@
        "Name: summary, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,8 +249,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations:\n",
+    "\n",
+    "1. Similar to the title column, there appears to be duplicated summaries. However, it's worth noting that the number of duplicates among the titles and summaries vastly differ, with there being only 115 duplicate summaries. This seems to suggest that a portion of duplicated titles could be conicidences. Namely, it could be the case that multiple, different novels just so happen to share the same title. In fact, after some investigation, it appears that this assumption is correct (at least for certain entries). For example, the title \"Bloodline\" has 4 total entries. However, each is for a separate novel. The same is true for the title \"Nemesis\". \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +272,7 @@
        "Name: genre, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +300,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +320,7 @@
        "<Axes: xlabel='genre'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -299,8 +340,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations:\n",
+    "1. Thriller is the most commonly occuring genre included in the data set, while travel is the rarest. \n",
+    "\n",
+    "2. The distribution of the genres appear to be grouped into 3 primary concentrations, i.e., {thriller, fantasy}, {science, history, horror, crime}, and {romance, psychology, sports, travel}. Moreover, these concentrations significantly differ in their frequency, with the standard deviation between the frequency of all genres being 345.77. \n",
+    "\n",
+    "3. The least represented genres are mostly compromised of non-fiction categories like psychology, sports, and travel, which may introduce an additional layer of difference between them and other genres. \n",
+    " \n",
+    "4. The most popular genres appear to very broadily defined, such as thriller which can be seen as having many overlapping qualities with fantasy and science. \n",
+    " \n",
+    "5. The genres themselves do not appear to be very well-defined. For instance, does the genres of science and history contain a mixture of both fiction and non-fiction, or are they only inclusive towards one? (EDIT: There appears to be a mixture)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +374,7 @@
        "Name: title_length, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +394,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -359,8 +416,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations\n",
+    "\n",
+    "1. The distribution of title lengths is generally centered around 0-25 words, with the overall mean being 19.3.\n",
+    "\n",
+    "2. Relative to the mean, the standard devation (14.6) is rather high, especially since 75% of the title lengths fall below 21 words. Although somewhat evident from the histogram, this seems to indicate that that there are multiple outliers skewing the data towards larger results. \n",
+    " \n",
+    "3. The max title length is a definitive outlier at 166 words. As such, it's (and other lengthy title entries') exclusion should be considered. However, it should first be evaluated whether certain genres have a pattern of possessing these longer titles, as excluding them under such a situation could one-sidedly affect the accuracy of predicting certain genres. \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +448,7 @@
        "Name: summary_length, dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +468,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -416,6 +487,19 @@
     "df.summary_length.hist(\n",
     "    figsize=(12, 8)\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations\n",
+    "\n",
+    "1. As we see, the summaries ususally contain around 0-5000 characters in them.\n",
+    "\n",
+    "2. We see that the mean(average) summary length is around 2106 characters. The longest summary begin of length 31263 and the smallest being 11.\n",
+    "\n",
+    "3. A summary of length 11 would most likely be interpreted incorrectly by our model since it doesn't provide much information on the book entry. A summary of that length is barely a sentence and is a great representation of an extraneous value in the data we are using."
    ]
   }
  ],
